# TraceGuard

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
apps/docs/: index.html
apps/docs/src/: styles.css
apps/landing/: index.html  package-lock.json  package.json  vite.config.ts
apps/landing/src/: App.tsx  Download.tsx  components.tsx  config.ts  main.tsx  styles.css
apps/landing/src/pages/: About.tsx  Home.tsx
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  components.tsx  main.tsx  styles.css
crates/traceguard-core/: Cargo.toml
crates/traceguard-core/src/: agents.rs  config.rs  db.rs  git.rs  guard.rs  harden.rs  ids.rs  lib.rs  models.rs  paths.rs  prompt.rs  secrets.rs
crates/traceguard-daemon/src/: api.rs
crates/trg-cli/src/: main.rs  settings.rs
docs/: agents.mdx  cli-commands.mdx  docs.json  local-dashboard.mdx  prompt-compression.mdx  release-notes.mdx  versioning.mdx
homebrew-tap/Formula/: traceguard.rb
integrations/browser-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
integrations/claude/: README.md  settings.snippet.json  traceguard-hook.sh
integrations/codex/: README.md  codex-adapter.sh
integrations/cursor/: README.md  package.json
integrations/cursor/src/: index.js
integrations/github/: README.md  action.yml
integrations/github/app/: app.manifest.json  handler.js
integrations/github/scripts/: ci-scan.sh
integrations/vscode/: README.md  extension.js  package.json
(+19 files in other folders)
