[workspace]
resolver = "2"
members = [
    "crates/traceguard-core",
    "crates/traceguard-daemon",
    "crates/trg-cli",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["TraceGuard contributors"]
repository = "https://github.com/TaxCollector23/TraceGuard"
rust-version = "1.74"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
once_cell = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# Profile tuned for small, fast release binaries.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
